--- a/LnLBackEndSystem/LnLBackEndSystem.csproj
+++ b/LnLBackEndSystem/LnLBackEndSystem.csproj
@@ -158,6 +158,18 @@
     <Compile Include="frmCEO.Designer.cs">
       <DependentUpon>frmCEO.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmClientLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmClientLogin.Designer.cs">
+      <DependentUpon>frmClientLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmClientRecoverPass.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmClientRecoverPass.Designer.cs">
+      <DependentUpon>frmClientRecoverPass.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmImageManager.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -182,12 +194,6 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmPayConfirm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmPayConfirm.Designer.cs">
-      <DependentUpon>frmPayConfirm.cs</DependentUpon>
-    </Compile>
     <Compile Include="frmRequestStock.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -205,6 +211,12 @@
     </Compile>
     <Compile Include="frmSQLConsole.Designer.cs">
       <DependentUpon>frmSQLConsole.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmStaffLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmStaffLogin.Designer.cs">
+      <DependentUpon>frmStaffLogin.cs</DependentUpon>
     </Compile>
     <Compile Include="frmStockPurchase.cs">
       <SubType>Form</SubType>
@@ -229,6 +241,12 @@
     </Compile>
     <Compile Include="frmDataManagement.Designer.cs">
       <DependentUpon>frmDataManagement.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmTabRegister.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTabRegister.Designer.cs">
+      <DependentUpon>frmTabRegister.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -261,12 +279,6 @@
     </Compile>
     <Compile Include="Secretary_update.Designer.cs">
       <DependentUpon>Secretary_update.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Tab_login.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Tab_login.Designer.cs">
-      <DependentUpon>Tab_login.cs</DependentUpon>
     </Compile>
     <Compile Include="frmTabPayment.cs">
       <SubType>Form</SubType>
@@ -307,6 +319,12 @@
     <EmbeddedResource Include="frmCEO.resx">
       <DependentUpon>frmCEO.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmClientLogin.resx">
+      <DependentUpon>frmClientLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmClientRecoverPass.resx">
+      <DependentUpon>frmClientRecoverPass.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmImageManager.resx">
       <DependentUpon>frmImageManager.cs</DependentUpon>
     </EmbeddedResource>
@@ -319,9 +337,6 @@
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmPayConfirm.resx">
-      <DependentUpon>frmPayConfirm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="frmRequestStock.resx">
       <DependentUpon>frmRequestStock.cs</DependentUpon>
     </EmbeddedResource>
@@ -330,6 +345,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmSQLConsole.resx">
       <DependentUpon>frmSQLConsole.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmStaffLogin.resx">
+      <DependentUpon>frmStaffLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmStockPurchase.resx">
       <DependentUpon>frmStockPurchase.cs</DependentUpon>
@@ -342,6 +360,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmDataManagement.resx">
       <DependentUpon>frmDataManagement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTabRegister.resx">
+      <DependentUpon>frmTabRegister.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -367,9 +388,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Secretary_update.resx">
       <DependentUpon>Secretary_update.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Tab_login.resx">
-      <DependentUpon>Tab_login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTabPayment.resx">
       <DependentUpon>frmTabPayment.cs</DependentUpon>
