--- a/LnLBackEndSystem/LnLBackEndSystem.csproj
+++ b/LnLBackEndSystem/LnLBackEndSystem.csproj
@@ -224,6 +224,12 @@
     <Compile Include="frmStockPurchase.Designer.cs">
       <DependentUpon>frmStockPurchase.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmStockRegister.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmStockRegister.Designer.cs">
+      <DependentUpon>frmStockRegister.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmStockReport.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -235,6 +241,12 @@
     </Compile>
     <Compile Include="frmSupplierOrder.Designer.cs">
       <DependentUpon>frmSupplierOrder.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmSupplierRegister.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSupplierRegister.Designer.cs">
+      <DependentUpon>frmSupplierRegister.cs</DependentUpon>
     </Compile>
     <Compile Include="frmTableSelect.cs">
       <SubType>Form</SubType>
@@ -364,11 +376,17 @@
     <EmbeddedResource Include="frmStockPurchase.resx">
       <DependentUpon>frmStockPurchase.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmStockRegister.resx">
+      <DependentUpon>frmStockRegister.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmStockReport.resx">
       <DependentUpon>frmStockReport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSupplierOrder.resx">
       <DependentUpon>frmSupplierOrder.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSupplierRegister.resx">
+      <DependentUpon>frmSupplierRegister.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTableSelect.resx">
       <DependentUpon>frmTableSelect.cs</DependentUpon>
