--- a/LnLSupportLibraries/LnLSupportLibraries.csproj
+++ b/LnLSupportLibraries/LnLSupportLibraries.csproj
@@ -90,10 +90,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BankObj.cs" />
-    <Compile Include="BookingObject.cs" />
+    <Compile Include="BookingObj.cs" />
     <Compile Include="ClientObj.cs" />
+    <Compile Include="CreditSaleObj.cs" />
     <Compile Include="Cypher.cs" />
     <Compile Include="DataModule.cs" />
+    <Compile Include="EventTypeObj.cs" />
     <Compile Include="PaymentMethodObj.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializing.cs" />
