--- a/LnLSupportLibraries/LnLSupportLibraries.csproj
+++ b/LnLSupportLibraries/LnLSupportLibraries.csproj
@@ -102,11 +102,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializing.cs" />
     <Compile Include="StaffBankObj.cs" />
+    <Compile Include="StaffEventObj.cs" />
     <Compile Include="StaffObj.cs" />
+    <Compile Include="StaffRankObj.cs" />
     <Compile Include="StockDisplayUtils.cs" />
     <Compile Include="StockObj.cs" />
     <Compile Include="SupplierBankObj.cs" />
     <Compile Include="SupplierObj.cs" />
+    <Compile Include="SupplierStockObj.cs" />
     <Compile Include="TabObj.cs" />
     <Compile Include="TableObjects.cs" />
     <Compile Include="TableToComps.cs" />
