--- a/LnLBackEndSystem/LnLBackEndSystem.csproj
+++ b/LnLBackEndSystem/LnLBackEndSystem.csproj
@@ -212,6 +212,12 @@
     <Compile Include="LoginForms\frmHRAdminLogin.Designer.cs">
       <DependentUpon>frmHRAdminLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Misc\frmHelp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Misc\frmHelp.Designer.cs">
+      <DependentUpon>frmHelp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Misc\frmImageManager.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -284,11 +290,11 @@
     <Compile Include="StaffForms\frmSQLConsole.Designer.cs">
       <DependentUpon>frmSQLConsole.cs</DependentUpon>
     </Compile>
-    <Compile Include="StaffForms\frmStaffBankManagement.cs">
+    <Compile Include="StaffForms\frmStaffBank.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="StaffForms\frmStaffBankManagement.Designer.cs">
-      <DependentUpon>frmStaffBankManagement.cs</DependentUpon>
+    <Compile Include="StaffForms\frmStaffBank.Designer.cs">
+      <DependentUpon>frmStaffBank.cs</DependentUpon>
     </Compile>
     <Compile Include="LoginForms\frmStaffLogin.cs">
       <SubType>Form</SubType>
@@ -490,6 +496,9 @@
     <EmbeddedResource Include="LoginForms\frmHRAdminLogin.resx">
       <DependentUpon>frmHRAdminLogin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Misc\frmHelp.resx">
+      <DependentUpon>frmHelp.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Misc\frmImageManager.resx">
       <DependentUpon>frmImageManager.cs</DependentUpon>
     </EmbeddedResource>
@@ -526,8 +535,8 @@
     <EmbeddedResource Include="StaffForms\frmSQLConsole.resx">
       <DependentUpon>frmSQLConsole.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="StaffForms\frmStaffBankManagement.resx">
-      <DependentUpon>frmStaffBankManagement.cs</DependentUpon>
+    <EmbeddedResource Include="StaffForms\frmStaffBank.resx">
+      <DependentUpon>frmStaffBank.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForms\frmStaffLogin.resx">
       <DependentUpon>frmStaffLogin.cs</DependentUpon>
